bin/tests/errors_lexer/lexer/lex_err_invalid_escape.swg
#global fileprivate

"\c" // swc-expected-error {{lex_err_invalid_escape}}
